--- a/LezioneFisicaIIIC_Feren_25_03_2020.tex
+++ b/LezioneFisicaIIIC_Feren_25_03_2020.tex
@@ -215,7 +215,7 @@ Da cui si deduce che
 
 Questo \'e l'accelerazione dell'asta quando si trova disposta orizzontalemente, nell'istante in cui viene lasciata ruotare attorno al perno. L'accelerazione nell'istante in cui forma un angolo di 30 gradi con l'orizzontale va fatta tenendo conto che il momento \'e un prodotto vettoriale tra forza e braccio e, in quanto tale, il suo modulo \'e $Fb\sin{\alpha}$, ove $\alpha$ \'e l'angolo che i due vettori, forza e braccio formano tra loro. Nel caso specifico $\pi/3$. L'accelerazione angolare, quindi, \'e
 \begin{eqnarray}
-	\dot{\omega} = \frac{3g\sin{\pi/3} }{2L} = \frac{3\cdot 9.8 \cancel{m}/s^2}{2\cdot 0.5 \cancel{m}} = 25.5rad/s^2
+	\dot{\omega} = \frac{3g\sin{\pi/3} }{2L} = \frac{3\cdot 9.8 \cancel{m}/s^2}{2\cdot 0.5 \cancel{m}}\frac{\sqrt{3}}{2} = 25.5rad/s^2
 \end{eqnarray}
 
 \end{document}
