--- a/LezioniIIICFerentino/RelativitaGalileiana/LezioneFisicaIIIC_Feren_25_03_2020.tex
+++ b/LezioniIIICFerentino/RelativitaGalileiana/LezioneFisicaIIIC_Feren_25_03_2020.tex
@@ -80,14 +80,14 @@ Inoltre, per quanto i concetti della relativit\'a galileiana possano risultare o
 
 \'E da notare che tale condizione \'e soddisfatta nella stragrande maggioranza delle situazioni ordinarie. Ad esempio, la velocit\'a di punta di un bolide di formula 1 \'e prossima ai $v = 400km/h$ che, convertita, diventa $v\approx 10^2m/s$, ben 1 milione di volte inferiore rispetto al valore di c!
 
-Tale condizione viene sinteticamente espressa con la seguente relazione matematica $v<<c$. Quando, invece, questa condizione cade, allora le trasformazioni galileiane non sono pi\'u valide. In particolare, per quanto detto finora, non \'e pi\'u valida nemmeno l'equazione  \ref{eq:galileo}. In tali casi occorre sostituire la Relativit\'a di Galileo con la Relativit\'a Ristretta di Einstain\footnote{In realt\'a le teorie di relativit\'a di Einstain sono due, una concepita nel 1905 e noto come relativit\'a ristretta, che generalizza la Relativi\'a di Galileo, e una pi\'u generale concepito circa 20 anni dopo, nota  come Relativit\'a Generale di Einstain, che generalizza anche la Relativit\'a Ristretta e nel quale la forza di gravit\'a viene interpretata come dovuta alla curvatura dello spazio-tempo quando sono presenti corpi dotati di una certa massa $M$.} (1905). Tale teoria trova applicazioni non nella vita ordinaria, ma, tipicamente, in fenomeni atomici e nucleari: la velocit\'a dell'elettrone intorno al nucleo dell'atomi di idrogeno, ad esempio \'e $v_e = 2.2\cdot 10^6 m/s$, poco meno di un centesimo della velocit\'a della luce. In queste condizioni, gli effetti della relativit\'a di Einstain, seppur non dominanti, sono comunque significativi (tema noto come ''struttura fine dell'atomo di idrogeno''). La relativit\'a di Einstain entra in gioco in una grande variet\'a di altri fenomeni come, ad esempio, la risonanza magnetica nucleare e fenomeni di astrofisica quali il moto di stelle e galassie nell'universo.
+Tale condizione viene sinteticamente espressa con la seguente relazione matematica $v<<c$. Quando, invece, questa condizione cade, allora le trasformazioni galileiane non sono pi\'u valide. In particolare, per quanto detto finora, non \'e pi\'u valida nemmeno l'equazione  \ref{eq:galileo}. In tali casi occorre sostituire la Relativit\'a di Galileo con la Relativit\'a Ristretta di Einstein\footnote{In realt\'a le teorie di relativit\'a di Einstein sono due, una concepita nel 1905 e noto come relativit\'a ristretta, che generalizza la Relativi\'a di Galileo, e una pi\'u generale concepito circa 20 anni dopo, nota  come Relativit\'a Generale di Einstein, che generalizza anche la Relativit\'a Ristretta e nel quale la forza di gravit\'a viene interpretata come dovuta alla curvatura dello spazio-tempo quando sono presenti corpi dotati di una certa massa $M$.} (1905). Tale teoria trova applicazioni non nella vita ordinaria, ma, tipicamente, in fenomeni atomici e nucleari: la velocit\'a dell'elettrone intorno al nucleo dell'atomi di idrogeno, ad esempio \'e $v_e = 2.2\cdot 10^6 m/s$, poco meno di un centesimo della velocit\'a della luce. In queste condizioni, gli effetti della relativit\'a di Einstein, seppur non dominanti, sono comunque significativi (tema noto come ''struttura fine dell'atomo di idrogeno''). La relativit\'a di Einstein entra in gioco in una grande variet\'a di altri fenomeni come, ad esempio, la risonanza magnetica nucleare e fenomeni di astrofisica quali il moto di stelle e galassie nell'universo.
 
 
 \section{Sistemi di riferimento inerziali}
 	
 Tornando alla relativit\'a galileiana, due sistemi di riferimento sono inerziali tra di loro quando si muovono di moto rettilineo l'uno rispetto all'altro. Se ci\'o accade, allora rimane valido il \emph{Primo Principio della Dinamica} in entrambe i due sistemi di riferimento, ossia in entrambe i due casi si ha che un corpo, se non sottoposto a forze, mantiene il suo moto rettilineo uniforme. Inoltre, dal momento che rimangono invariate massa, forza e accelerazione, si deduce che anche gli altri due principi della dinamica rimangono invariati.
 
-L'invarianza dei tre principi della dinamica costituisce il {\bf Principio di Relativit\'a di Galileo}  (pag 98): I fenomeni meccanici si svolgono nello stesso modo, cio\'e seguono le stesse leggi, in tutti i sistemi di riferimento inerziali\footnote{Studieremo pi\'u in l\'a che ci\'o non \'e valido, invece, nell'elettromagnetismo ma, anzi, risulta che la velocit\'a della luce $c$ sia una costante quando si passa da un sistema di riferimento all'altro. \'E stata questa una delle osservazioni fondamentali che ha portato Einstain a formulare la sua Teoria della Relativit\'a Ristretta.}.
+L'invarianza dei tre principi della dinamica costituisce il {\bf Principio di Relativit\'a di Galileo}  (pag 98): I fenomeni meccanici si svolgono nello stesso modo, cio\'e seguono le stesse leggi, in tutti i sistemi di riferimento inerziali\footnote{Studieremo pi\'u in l\'a che ci\'o non \'e valido, invece, nell'elettromagnetismo ma, anzi, risulta che la velocit\'a della luce $c$ sia una costante quando si passa da un sistema di riferimento all'altro. \'E stata questa una delle osservazioni fondamentali che ha portato Einstein a formulare la sua Teoria della Relativit\'a Ristretta.}.
 
 \section{Relativit\'a del concetto di sistema di riferimento inerziale}
 
